adding mapper, controller to csv files,